refactor(test): make mapper fields final in BookDataLoaderTest